--- a/MovieTheaterSite/movie-theater-app/src/app/signup/signup.component.html
+++ b/MovieTheaterSite/movie-theater-app/src/app/signup/signup.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-left: 10rem;">
     <!--<p>{{ submitMessage }}</p>-->
     <h2>Sign-up</h2>
     <form [formGroup]="form" #signupinfo (ngSubmit)="SignUpForm(signupinfo)">
