--- a/MovieTheaterSite/movie-theater-app/src/app/app.component.css
+++ b/MovieTheaterSite/movie-theater-app/src/app/app.component.css
@@ -13,4 +13,24 @@ nav a:hover {
   nav a.active {
     color: #ffffff;
   }
+
+  mat-sidenav-container {
+    height: 100%;
+}
+
+mat-sidenav, mat-sidenav-content {
+  background-color: blue;
+    padding: 16px;
+}
+
+mat-sidenav {
+    background-color: gray;
+    width: 300px;
+}
+
+.navbar {
+    justify-content: space-between;
+}
+
+
   
