--- a/MovieTheaterSite/movie-theater-app/src/app/signup/signup.component.html
+++ b/MovieTheaterSite/movie-theater-app/src/app/signup/signup.component.html
@@ -39,7 +39,7 @@
 
         <div class="row">
             <div class="col-md-offset-1 col-md-4">
-                <label for="confirmpassword">confirm password</label>
+                <label for="confirmpassword">Confirm password</label>
                 <input formControlName="confirmpassword" type="password" class="form-control" placeholder="password">
             </div>
         </div>
