--- a/MovieTheaterSite/movie-theater-app/src/app/movie-detail/movie-detail.component.html
+++ b/MovieTheaterSite/movie-theater-app/src/app/movie-detail/movie-detail.component.html
@@ -12,7 +12,7 @@
     <div class="container" style="margin: auto; width: 30rem;">
     <div class="list-group">
         <a class="list-group-item list-group-item-action active">Choose a Showtime for : {{movie.title}}</a>
-        <a *ngFor="let showing of showings" routerLink='/seats' class="list-group-item list-group-item-action"> {{showing.showtime}}</a>
+        <a *ngFor="let showing of showings" routerLink='/seats/{{showing.showingId}}' class="list-group-item list-group-item-action"> {{showing.showtime}}</a>
         <!--<a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>-->
     </div>
     </div>
