added local storage of userId after logging in and some authorization/routing to go along with that, removed diagnostic/debugging messages from the view, tweeaked things to try to make nicer more user friendly

--- a/MovieTheaterSite/movie-theater-app/src/app/app.component.html
+++ b/MovieTheaterSite/movie-theater-app/src/app/app.component.html
@@ -7,8 +7,14 @@
      <li class="nav-item" >
            <a routerLink="/movies" class="nav-link active" >Movies</a>
      </li>
-     <li class="nav-item" >
-          <a routerLink="/login" class="nav-link active" >Login/Sign-up</a>
+     <li class="nav-item" *ngIf="status ==null" >
+          <a routerLink="/login" class="nav-link active"  >Login/Sign-up</a>
+     </li>
+     <li class="nav-item" *ngIf="status!=null" >
+          <a routerLink="/" class="nav-link active" >View Past Puchases</a>
+     </li>
+     <li class="nav-item" *ngIf="status!=null" >
+          <a routerLink="/" (click)= "this.logout()" class="nav-link active" >Logout</a>
      </li>
 </nav>
 </div>
