--- a/MovieTheaterSite/movie-theater-app/src/app/movies/movies.component.html
+++ b/MovieTheaterSite/movie-theater-app/src/app/movies/movies.component.html
@@ -13,6 +13,7 @@
 </div>
 <app-movie-detail [movie]="selectedMovie"></app-movie-detail>-->
 <h2 style="text-align: center;">Now Showing</h2>
+<h4 style="text-align: center;">Click for showtimes and more info!</h4>
 <div class="container justify-content-center" style="margin: auto;">
 <ul class="list-group" >
     <div class="row">
