--- a/MovieTheaterSite/movie-theater-app/src/app/log-in/log-in.component.html
+++ b/MovieTheaterSite/movie-theater-app/src/app/log-in/log-in.component.html
@@ -1,7 +1,8 @@
 <div class="container">
-    <h2>Login</h2>
-    <form #loginForm="ngForm" (ngSubmit)="LoginSubmit(loginForm)">
+    <h2>Please Login</h2>
+    <form #loginForm="ngForm" (ngSubmit)="LoginSubmit(loginForm)" style="width: 35rem;">
         {{diagnostic}}
+        <br>
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" class="form-control" placeholder="username" id="username" required
