--- a/MovieTheaterSite/movie-theater-app/src/app/log-in/log-in.component.html
+++ b/MovieTheaterSite/movie-theater-app/src/app/log-in/log-in.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-    <h2>Please Login</h2>
+    <h2 *ngIf="this.isLoggedIn ==null" >Please Login</h2>
+    <h2 *ngIf="this.isLoggedIn!=null">Please Select a Movie</h2>
     <form #loginForm="ngForm" (ngSubmit)="LoginSubmit(loginForm)" style="width: 35rem;">
        {{diagnostic}}
         <br>
