--- a/MovieTheaterSite/movie-theater-app/src/app/movies/movies.component.html
+++ b/MovieTheaterSite/movie-theater-app/src/app/movies/movies.component.html
@@ -21,7 +21,7 @@
     style="width: 300px; margin: 10px; "> 
     <!--not sure if should style with background-color: #101010;-->
     <a routerLink="/detail/{{movie.movieId}}">
-        <span>{{movie.movieId}} </span> {{movie.title}}
+        <span> </span> {{movie.title}}
         <br>
         <img [src]=movie.poster [style.width.px]='imagewidth' [style.margin.px]='imagemargin' align="middle">
     </a>
