--- a/MovieTheaterSite/movie-theater-app/src/app/movies/movies.component.html
+++ b/MovieTheaterSite/movie-theater-app/src/app/movies/movies.component.html
@@ -14,8 +14,8 @@
 <app-movie-detail [movie]="selectedMovie"></app-movie-detail>-->
 <h2 style="text-align: center;">Now Showing</h2>
 <h4 style="text-align: center;">Click for showtimes and more info!</h4>
-<div class="container justify-content-center" style="margin: auto;">
-<ul class="list-group" >
+<div class="container justify-content-center col-8" style="margin: auto;">
+<ul class="list-group">
     <div class="row">
     <li *ngFor="let movie of movies" class="list-group-item list-group-item-action text-center" 
     style="width: 300px; margin: 10px; "> 
